Add new landing page layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,7 @@
   <body>
     <header>
       <h1 class="main-title">
+        <img src="/images/icon.png" alt="IPinator icon">
         IPinator
         <p class="description">{{ site.description }}</p>
       </h1>
