--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,9 @@
   <body>
     <header>
       <h1 class="main-title">
-        <img src="/images/icon.png" alt="IPinator icon">
+        <a href="/">
+          <img src="/images/icon.png" alt="IPinator icon">
+        </a>
         IPinator
         <p class="description">{{ site.description }}</p>
       </h1>
@@ -15,6 +17,7 @@
     </main>
     <footer>
       <span class="copyright">&copy;</span> {{ site.time | date: '%Y' }} Kaishin & Co SARL. All Rights Reserved.
+        <a href="/support">Support</a> &mdash; <a href="/privacy">Privacy</a>
       <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js" type="text/javascript"></script>
       <script src="/scripts/main.js" type="text/javascript"></script>
     </footer>
