--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,4 +10,5 @@
   {% if page.date %}<meta http-equiv="date" content="{{ page.date }}">{% endif %}
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
   <link rel="canonical" href="{{ page.url | replace:"index.html","" | prepend: site.baseurl | prepend: site.url }}">
+  <link rel="shortcut icon" href="/favicon.ico" />
 </head>
