--- a/_scss/main.scss
+++ b/_scss/main.scss
@@ -31,9 +31,9 @@ header {
   text-align: center;
 
   img {
-    max-width: 150px;
     display: block;
     margin: 0 auto 1rem;
+    max-width: 150px;
   }
 }
 
@@ -52,27 +52,27 @@ main {
     font-family: "Baskerville", "Garamond", serif;
     font-size: 1em;
     line-height: 1.4;
-    max-width: 500px;
     margin: 0 auto;
+    max-width: 500px;
     padding-bottom: 2rem;
     position: relative;
     text-align: center;
 
     &::after {
-      content: "";
-      background-color: #EEE;
-      margin: 3rem auto 0;
       @include wtr-size(200px, 1px);
+      background-color: #eee;
+      content: "";
       display: block;
+      margin: 3rem auto 0;
     }
   }
 
   hr {
     border: 0;
     border-top: 1px solid #ccc;
+    display: block;
     height: 1px;
     margin-bottom: 3rem;
-    display: block;
   }
 }
 
@@ -183,8 +183,8 @@ textarea {
 }
 
 textarea {
-  resize: vertical;
   min-height: 100px;
+  resize: vertical;
 }
 
 [type="search"] {
