--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
       {{ content }}
     </main>
     <footer>
-      <span class="copyright">&copy;</span> {{ site.time | date: '%Y' }} Kaishin & Co SARL. All Rights Reserved.
+      <span class="copyright">&copy;</span> {{ site.time | date: '%Y' }} Kaishin &amp; Co SARL. All Rights Reserved.
       <a href="/support">Support</a> &mdash; <a href="/privacy">Privacy</a>
       <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js" type="text/javascript"></script>
       <script src="/scripts/main.js" type="text/javascript"></script>
