--- a/_scss/main.scss
+++ b/_scss/main.scss
@@ -4,6 +4,10 @@
 @import "support";
 @import "footer";
 
+body {
+  font-family: -apple-system, "Helvetica Neue", "Helvetica", sans-serif;
+}
+
 img {
   max-width: 100%;
 }
@@ -38,18 +42,18 @@ header {
 }
 
 .description {
+  color: rgba(black, 0.5);
   font-size: 0.4em;
+  font-weight: 400;
   line-height: 1.2;
   margin-top: 0.5em;
 }
 
 main {
   @extend %container;
-  font-family: "Helvetica Neue";
 
   .description {
     color: #555;
-    font-family: "Baskerville", "Garamond", serif;
     font-size: 1em;
     line-height: 1.4;
     margin: 0 auto;
